Placeholders and localization to  reduce log size

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -141,6 +141,155 @@
  adds_4_asteroid_artillery_points:0 "Asteroid Artillery Upgrade Points: §G+4§!\nStrike Corvette HP: §G+80%§!\nStrike Corvette Weapons Damage: §G+80%§!\nStrike Corvette Capacity: §G+100%§!"
 
 # /
+# Modifiers
+# GPM COMPATIBILITY
+ gpm_anti_asteroid:0 "Anti-Asteroid System"
+ gpm_anti_asteroid_desc:0 "A planetary array of specialised weapons to divert any incoming asteroid to designated zones, non damaging valuable territory."
+
+ gpm_artificial_gravity:0 "Artificial Gravity System"
+ gpm_artificial_gravity_desc:0 "A special system made amplifying the planet's core effect to ensure a stable and habitable gravity."
+
+ gpm_non_hostile_flora:0 "Non-Hostile Flora"
+ gpm_non_hostile_flora_desc:0 "The plant life on this world was unusually hostile or toxic to external physiology, but now it coexist with no problem with any lifeform."
+
+ gpm_good_titanic_predators:0 "Titanic Predators"
+ gpm_good_titanic_predators_desc:0 "This world is home to gigantic monstrous creatures that soar through the sky and eat nearly everything in sight, in their controlled environments."
+
+ gpm_good_unusual_formations:0 "Unusual Formations"
+ gpm_good_unusual_formations_desc:0 "On this planetary body are numerous amounts of odd but nevertheless natural geological shapes stretching for miles and miles."
+
+ gpm_good_locust_plagues:0 "Ravaging Insects"
+ gpm_good_locust_plagues_desc:0 "The world is home to a particularly voracious species of locust, now controlled by engineered pheromones."
+
+ gpm_docile_trubbles:0 "Trubbles"
+ gpm_docile_trubbles_desc:0 "They just sit there, looking cute, until they breed like crazy. They are a prefered pet to the younger now."
+
+ gpm_docile_arachnophobia:0 "Arachnophobia"
+ gpm_docile_arachnophobia_desc:0 "A world overrun by packs of giant arachnids. Even with their fearsome aspect, their ecological niche is to keep the environment controlled and out of other insect competition, so they are pretty harmless."
+
+ gpm_docile_giant_worm:0 "Giant Worm"
+ gpm_docile_giant_worm_desc:0 "Colossal worms that live beneath the sand. They are easily attracted to rhythmic vibrations on the surface, and they would breach in pursuit of the origin of such vibrations almost immediately. This seems to be an effort to defend their territory, of which they seem to be highly protective. Thus to see a worm, and live to tell about it, might be a rarity in itself. The sandworms are extremely territorial; as soon as two worms sense each other's presence, they let out chuffing roars of challenge, bellowing melange-smelling exhaust from their cavernous throats. Despite all the potential danger, the spice must flow, so settlements and colonist are equipped with special sound deflectors, making the worms docile and harmless."
+
+ gpm_docile_abominable_predators:0 "Abominable Calmed Predators"
+ gpm_docile_abominable_predators_desc:0 "On cold nights, this creature roams the lands looking for food. It's massive height and large forearms are a terrifying sight. While they don't hunt in packs they are seen to be living in small groups of around four to six. These creatures have a thick light-blue to white coat of fur and giant claws. It behaves almost apelike and has been observed to communicate through grunts and gestures with its fellow companions. While we leave them alone, they will not be a problem."
+ 
+ gpm_docile_carnivorous_flies:0 "Carnivorous FliesE"
+ gpm_docile_carnivorous_flies_desc:0 "These tiny flies may seem like just an annoyance, they are the most dangerous creatures on this world. These tiny flies glow in the dark at night, but that's not when they're out feeding. During the night they glow as a means to attract other carnivorous flies as a part of their mating ritual, which seems to be quite complex. During the day they fly around looking for food.\nBeing carnivorous, they tend to swarm their prey and eat it alive in a matter of hours. Large, or small, all creatures are food for them. What makes it even worse is their colony like behavior, allowing them to navigate complex tunnels.. or vents! The fact that they emit no noise to even warn their next meal is the worst part, but natural repels made for colonist and settlements are a effective way to deal with this problem."
+
+ gpm_docile_giant_ocean_snakes:0 "Gigantic Ocean Snakes"
+ gpm_docile_giant_ocean_snakes_desc:0 "Giant underwater snakes roam the ocean's seafloor. These snakes can become hundreds of feet and are seen to be extremely predatory. They are the apex predator of this world's oceanic life, but any settler is safe with the adequate equipment."
+ 
+ gpm_titanic_predators: ""
+ gpm_titanic_predators_desc: ""
+
+ gpm_strong_volcanism: ""
+ gpm_strong_volcanism_desc: ""
+
+ gpm_high_gravity_2: ""
+ gpm_high_gravity_2_desc: ""
+
+ gpm_locust_plagues: ""
+ gpm_locust_plagues_desc: ""
+
+ gpm_global_thunderstorms: ""
+ gpm_global_thunderstorms_desc: ""
+
+ gpm_hostile_flora: ""
+ gpm_hostile_flora_desc: ""
+
+ gpm_arachnophobia: ""
+ gpm_arachnophobia_desc: ""
+
+ gpm_unusual_seasons: ""
+ gpm_unusual_seasons_desc: ""
+
+ gpm_blizzards: ""
+ gpm_blizzards_desc: ""
+
+ gpm_cursed_world: ""
+ gpm_cursed_world_desc: ""
+
+ gpm_sandstorms: ""
+ gpm_sandstorms_desc: ""
+
+ gpm_thin_atmospheres: ""
+ gpm_thin_atmospheres_desc: ""
+ 
+ gpm_unstable_tectonics_2: ""
+ gpm_unstable_tectonics_2_desc: ""
+
+ gpm_giant_ocean_snakes: ""
+ gpm_giant_ocean_snakes_desc: ""
+
+ gpm_quicksand: ""
+ gpm_quicksand_desc: ""
+
+ gpm_trubbles: ""
+ gpm_trubbles_desc: ""
+
+ gpm_unusual_formations: ""
+ gpm_unusual_formations_desc: ""
+
+ gpm_giant_worm: ""
+ gpm_giant_worm_desc: ""
+
+ gpm_asteroid_impacts_2: ""
+ gpm_asteroid_impacts_2_desc: ""
+
+ gpm_resilent_parasites: ""
+ gpm_resilent_parasites_desc: ""
+
+ gpm_great_temperature_variation: ""
+ gpm_great_temperature_variation_desc: ""
+
+ gpm_toxic_gas: ""
+ gpm_toxic_gas_desc: ""
+
+ gpm_abominable_predators: ""
+ gpm_abominable_predators_desc: ""
+
+ gpm_simple_organisms: ""
+ gpm_simple_organisms_desc: ""
+
+ gpm_frequent_thunderstorms: ""
+ gpm_frequent_thunderstorms_desc: ""
+
+ gpm_dense_atmospheres: ""
+ gpm_dense_atmospheres_desc: ""
+
+ gpm_low_gravity_2: ""
+ gpm_low_gravity_2_desc: ""
+
+ gpm_perfect_seasons: ""
+ gpm_perfect_seasons_desc: ""
+
+ gpm_newly_evolved_complex_organisms: ""
+ gpm_newly_evolved_complex_organisms_desc: ""
+
+ gpm_symbiotic_life: ""
+ gpm_symbiotic_life_desc: ""
+ 
+ gpm_never_ending_aurora: ""
+ gpm_never_ending_aurora_desc: ""
+
+ # MEM
+ pleasure_palace: ""
+ pleasure_palace_desc: ""
+
+ # PD
+ hyceanfloodedhabitat: ""
+ hyceanfloodedhabitat_desc: ""
+
+ engineered_environment: ""
+ engineered_environment_desc: ""
+
+ engineered_environment_gaia: ""
+ engineered_environment_gaia_desc: ""
+
+ # Giga
+ ringworld_upgrade_timer: ""
+ ringworld_upgrade_timer_desc: ""
+# /
 
 # Planetary Diversity
  district_arc_sr_industry:0 "Deactivated district"
@@ -151,4 +300,202 @@
  district_rw_quberine_plural:0 "Quberine Extractors"
  district_rw_quberine_desc:0 "Automated harvesters which retrieve self-regenerating Quberine from the Squareworld's frame and break it down into usable Alloys and Minerals."
 
+# /
+
+# Origins
+ # PD
+ origin_techno_world: "[PD Uniques] Techno World"
+ origin_techno_world_desc: ""
+
+ origin_pd_shroud: "[PD Shroud] Shroud World"
+ origin_pd_shroud_desc: ""
+ 
+ origin_pd_hive: "[PD] Hive World"
+ origin_pd_hive_desc: ""
+
+ origin_pd_radiotrophic_mutants: "[PD Exotics] Radiothrophic World"
+ origin_pd_radiotrophic_mutants_desc: ""
+
+ origin_pd_scrapyard_world: "[PD Uniques] Scrapyard World"
+ origin_pd_scrapyard_world_desc: ""
+
+ origin_pd_hycean_aquatic: "[PD Exotics] Hycean World"
+ origin_pd_hycean_aquatic_desc: ""
+
+ 
+# /
+
+# Jobs
+ job_crucible_foundry: ""
+ job_crucible_foundry_desc: ""
+ job_crucible_foundry_effect_desc: ""
+ mod_job_crucible_foundry_add: ""
+
+ job_crucible_alloy_drone: ""
+ job_crucible_alloy_drone_desc: ""
+ job_crucible_alloy_drone_effect_desc: ""
+ mod_job_crucible_alloy_drone_add: ""
+
+ job_crucible_fabricator: ""
+ job_crucible_fabricator_desc: ""
+ job_crucible_fabricator_effect_desc: ""
+ mod_job_crucible_fabricator_add: ""
+
+ job_acot_roboman: ""
+ job_acot_roboman_desc: ""
+ job_acot_roboman_effect_desc: ""
+
+ job_acot_robodrone: ""
+ job_acot_robodrone_desc: ""
+ job_acot_robodrone_effect_desc: ""
+
+ job_ald_hyperfactorio: ""
+ job_ald_hyperfactorio_desc: ""
+ job_ald_hyperfactorio_effect_desc: ""
+
+ job_ald_hyperartificer: ""
+ job_ald_hyperartificer_desc: ""
+ job_ald_hyperartificer_effect_desc: ""
+
+ job_ald_hyperfactorio_drone: ""
+ job_ald_hyperfactorio_drone_desc: ""
+ job_ald_hyperfactorio_drone_effect_desc: ""
+
+ job_giga_interstellar_researcher: ""
+ job_giga_interstellar_researcher_desc: ""
+ job_giga_interstellar_researcher_effect_desc: ""
+ mod_job_giga_interstellar_researcher_add: ""
+
+ job_giga_interstellar_researcher_drone: ""
+ job_giga_interstellar_researcher_drone_desc: ""
+ job_giga_interstellar_researcher_drone_effect_desc: ""
+ mod_job_giga_interstellar_researcher_drone_add: ""
+# /
+
+# Buildings
+ building_dm_ancient_palace: ""
+ building_dm_ancient_palace_desc: ""
+
+ building_ae_ancient_palace: ""
+ building_ae_ancient_palace_desc: ""
+
+ building_dm_ancient_hive_cluster: ""
+ building_dm_ancient_hive_cluster_desc: ""
+
+ building_ae_ancient_hive_cluster: ""
+ building_ae_ancient_hive_cluster_desc: ""
+ 
+ building_dm_ancient_control_center: ""
+ building_dm_ancient_control_center_desc: ""
+
+ building_ae_ancient_control_center: ""
+ building_ae_ancient_control_center_desc: ""
+
+ building_heaven_sanctuary: ""
+ building_heaven_sanctuary_desc: ""
+
+ building_phanon_tower: ""
+ building_phanon_tower_desc: ""
+
+ building_stellarite_palace: ""
+ building_stellarite_palace_desc: ""
+
+ building_stellarite_control_center: ""
+ building_stellarite_control_center_desc: ""
+
+ building_stellarite_hive_cluster: ""
+ building_stellarite_hive_cluster_desc: ""
+
+ building_phanon_palace: ""
+ building_phanon_palace_desc: ""
+
+ building_phanon_hive_cluster: ""
+ building_phanon_hive_cluster_desc: ""
+
+ building_phanon_control_center: ""
+ building_phanon_control_center_desc: ""
+
+ azur_building_mind_capital: ""
+ azur_building_mind_capital_desc: ""
+
+ azur_building_mind_net_capital: ""
+ azur_building_mind_net_capital_desc: ""
+
+ building_nirvana_empire_palace: ""
+ building_nirvana_empire_palace_desc: ""
+
+ building_kuat_command_center: ""
+ building_kuat_command_center_desc: ""
+
+ building_ancient_palace_at: ""
+ building_ancient_palace_at_desc: ""
+
+ building_eternal_nexus_ai: ""
+ building_eternal_nexus_ai_desc: ""
+ 
+ building_eternal_palace: ""
+ building_eternal_palace_desc: ""
+
+ building_SCO_resort_system_capital: ""
+ building_SCO_resort_system_capital_desc: ""
+
+ building_SCO_slave_system_capital: ""
+ building_SCO_slave_system_capital_desc: ""
+
+ building_fe_palace: ""
+ building_fe_palace_desc: ""
+
+ building_ae_palace: ""
+ building_ae_palace_desc: ""
+
+ building_lt_palace: ""
+ building_lt_palace_desc: ""
+
+ building_oe_palace: ""
+ building_oe_palace_desc: ""
+
+ building_dm_galactic_capital: ""
+ building_dm_galactic_capital_desc: ""
+
+ building_ae_galactic_capital: ""
+ building_ae_galactic_capital_desc: ""
+
+ building_stellarite_galactic_capital: ""
+ building_stellarite_galactic_capital_desc: ""
+
+ building_dm_galactic_hive_capital: ""
+ building_dm_galactic_hive_capital_desc: ""
+
+ building_ae_galactic_hive_capital: ""
+ building_ae_galactic_hive_capital_desc: ""
+
+ building_stellarite_galactic_hive_capital: ""
+ building_stellarite_galactic_hive_capital_desc: ""
+
+ building_dm_galactic_machine_capital: ""
+ building_dm_galactic_machine_capital_desc: ""
+
+ building_ae_galactic_machine_capital: ""
+ building_ae_galactic_machine_capital_desc: ""
+
+ building_stellarite_galactic_machine_capital: ""
+ building_stellarite_galactic_machine_capital_desc: ""
+
+ building_system_capital_gr: ""
+ building_system_capital_gr_desc: ""
+
+ building_hive_major_capital_sick: ""
+ building_hive_major_capital_sick_desc: ""
+
+ building_techno_04_clone_vat: ""
+ building_techno_04_clone_vat_desc: ""
+
+ building_giga_elysium_host_hive_major_capital: ""
+ building_giga_elysium_host_hive_major_capital_desc: ""
+
+ building_giga_elysium_host_machine_major_capital: ""
+ building_giga_elysium_host_machine_major_capital_desc: ""
+
+ building_giga_elysium_host_major_capital: ""
+ building_giga_elysium_host_major_capital_desc: ""
 # /
