--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3685,16 +3685,86 @@ mod_tec_assembly_prohibited_no_cyborg_short: ""
 mod_tec_assembly_prohibited_no_hive: "§RNo $tec_loc_biological_assembly$ provided as assembling species is not Hive Minded§!"
 mod_tec_assembly_prohibited_no_hive_short: ""
 
-############ removed ############
+# Eco cats
+leader_rulers: "Rulers"
+leader_envoys: "Envoys"
 
- district_tec_arcology_firstdummy:0 "Empty Production Arcology"
- district_tec_arcology_firstdummy_plural:0 "Empty Production Arcologies"
- district_tec_arcology_firstdummy_desc:0 "These empty arcologies must be specialized via planetary decision to become £job_researcher£ §YResearch Arcologies§!, £alloys£ §YIndustrial Arcologies§! or £mod_country_admin_cap_add£ §YAdministrative Arcologies§!, paired with the specialization of other §YUtility Arcologies§!."
+# Jobs WIP
 
- district_tec_arcology_secondummy:0 "Empty Utility Arcology"
- district_tec_arcology_secondummy_desc:0 "These empty arcologies must be specialized via planetary decision to become £exotic_gases£ §YRefinery Arcologies§!, £job_soldier£ §YMilitary Arcologies§! or £consumer_goods£ §Ycivil industry Arcologies§!, paired with the specialization of other §YProduction Arcologies§!."
- district_tec_arcology_secondummy_plural:0 "Empty Utility Arcologies"
+job_tec_psychohistorian: ""
+job_tec_psychohistorian_desc: ""
+job_tec_psychohistorian_effect_desc: ""
+mod_job_tec_psychohistorian_add: ""
 
- district_tec_elysium_commercial:0 "Elysian Commercial Arcology"
- district_tec_elysium_commercial_plural:0 "Elysian Commercial Arcologies"
- district_tec_elysium_commercial_desc:0 "Specialized arcologies where you can buy nearly all possible things fabricated in the ring, or enjoy a good meal from products directly harvested on it."
+job_tec_technomancer: ""
+job_tec_technomancer_desc: ""
+job_tec_technomancer_effect_desc: ""
+mod_job_tec_technomancer_add: ""
+
+job_tec_starseeker: ""
+job_tec_starseeker_desc: ""
+job_tec_starseeker_effect_desc: ""
+mod_job_tec_starseeker_add: ""
+
+job_tec_psi_researcher: ""
+job_tec_psi_researcher_desc: ""
+job_tec_psi_researcher_effect_desc: ""
+mod_job_tec_psi_researcher_add: ""
+
+job_tec_bio_researcher: ""
+job_tec_bio_researcher_desc: ""
+job_tec_bio_researcher_effect_desc: ""
+mod_job_tec_bio_researcher_add: ""
+
+job_tec_mecha_researcher: ""
+job_tec_mecha_researcher_desc: ""
+job_tec_mecha_researcher_effect_desc: ""
+mod_job_tec_mecha_researcher_add: ""
+
+job_tec_starseeker_priest: ""
+job_tec_starseeker_priest_desc: ""
+job_tec_starseeker_priest_effect_desc: ""
+mod_job_tec_starseeker_priest_add: ""
+
+job_tec_cycle_priest: ""
+job_tec_cycle_priest_desc: ""
+job_tec_cycle_priest_effect_desc: ""
+mod_job_tec_cycle_priest_add: ""
+
+job_tec_mentat_priest: ""
+job_tec_mentat_priest_desc: ""
+job_tec_mentat_priest_effect_desc: ""
+mod_job_tec_mentat_priest_add: ""
+
+job_tec_labrat: ""
+job_tec_labrat_desc: ""
+job_tec_labrat_effect_desc: ""
+mod_job_tec_labrat_add: ""
+
+job_tec_diversifier: ""
+job_tec_diversifier_desc: ""
+job_tec_diversifier_effect_desc: ""
+mod_job_tec_diversifier_add: ""
+
+job_tec_singularity_researcher: ""
+job_tec_singularity_researcher_desc: ""
+job_tec_singularity_researcher_effect_desc: ""
+mod_job_tec_singularity_researcher_add: ""
+
+job_tec_astrologer: ""
+job_tec_astrologer_desc: ""
+job_tec_astrologer_effect_desc: ""
+mod_job_tec_astrologer_add: ""
+
+job_tec_omniguard: ""
+job_tec_omniguard_desc: ""
+job_tec_omniguard_effect_desc: ""
+mod_job_tec_omniguard_add: ""
+
+# Building wips
+
+building_tec_proto_capital: ""
+building_tec_proto_capital_desc: ""
+
+building_tec_proto_major_capital: ""
+building_tec_proto_major_capital_desc: ""
