--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -333,7 +333,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # former civic_executive_committee
  civic_tec_executive_committee: "Executive Committee"
  civic_tec_executive_committee_desc: "This government is dominated by a committee of the Empire's most skillful bureaucrats and administrators."
- civic_tooltip_tec_executive_committee_effects:0 "Active employed §YGovernors§! have no £unity£ §YUnity§! Upkeep and produce §G3§! £unity£ §YUnity§! per level, additionally increased for §YOligarchic§! empires.\n\n$tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!\n\n"
+ civic_tooltip_tec_executive_committee_effects:0 "Active employed §YGovernors§! have no £unity£ §YUnity§! Upkeep and produce §G3§! £unity£ §YUnity§! per level, additionally increased for §YOligarchic§! empires.\n\n$tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!"
 
 # /
 
