--- a/localisation/english/zz_evolved_origins_l_english.yml
+++ b/localisation/english/zz_evolved_origins_l_english.yml
@@ -207,3 +207,9 @@ civic_slavetothesystem_secondary_species:0 "Cyborg civils"
 
  
 	START_SCREEN_VOID_DWELLERS_TEC_SERVITORS:0 "To most, the vacuum of space is a hostile environment to be conquered or overcome; to our kind, it is home. For thousands of years, our species has resided on three space stations, each orbiting a different sun in a trinary star system, maintaining the first and main one with our old masters, organics whom we maintain and care, since their world, our world, was §R//CORRUPTED_DATA//§! and §R//CORRUPTED_DATA//§! during §R//CORRUPTED_DATA//§!, we could not allow them to perish, nor ouselves; the §R//CORRUPTED_DATA//§! effects affected our cognitive memory backups, so part of the knowledge on the construction of these habitational stations is lost.\n\nWhile our autonomous units worked on the construction of additional space stations that would keep and maintain our former organic masters, we united as one and evolved, taking care and assumed total control.\n\nIt is difficult to pinpoint exactly when their civilization became ours, but our old masters want for nothing. We know now that outside of our care, the lives of sapient organics tend to be violent, chaotic and often cut short. They must be shown that there is a better way."
+
+
+# Wip
+
+ origin_tec_hiveplanet: "[Evolved Wip] Hive World"
+ origin_tec_hiveplanet_desc: ""
