--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -302,27 +302,42 @@
 
 # /
 
-# Origins
+# Origins - not including desc since that behaves wonky with origin localization load order
  # PD
- origin_techno_world: "[PD Uniques] Techno World"
- origin_techno_world_desc: ""
+ origin_techno_world: "[PD Uniques] The Children of Unit 04"
+ origin_pd_shroud: "[PD Shroud] Shroud-Touched"
+ origin_pd_hive: "[PD] Infecting Planetary Hive"
+ origin_pd_radiotrophic_mutants: "[PD Exotics] Radiothrophic Mutants"
+ origin_pd_scrapyard_world: "[PD Uniques] Another Xeno's Trash"
+ origin_pd_hycean_aquatic: "[PD Exotics] Hycean Deep Dwellers"
 
- origin_pd_shroud: "[PD Shroud] Shroud World"
- origin_pd_shroud_desc: ""
- 
- origin_pd_hive: "[PD] Hive World"
- origin_pd_hive_desc: ""
+ # NDO
+ origin_psionic_abilities: "[NDO] Psionic Abilities"
+ origin_resort_world: "[NDO] Resort World"
+ origin_disharmonious_unity: "[NDO] Disharmonious Unity"
+ origin_technological_unity: "[NDO] Technological Unity"
+ origin_megacorp_unification: "[NDO] Megacorp Unification"
+ origin_one_religion: "[NDO] One Religion"
+ origin_way_to_peacefulness: "[NDO] Way of Peacefulness"
+ origin_unification_wars: "[NDO] Unification Wars"
 
- origin_pd_radiotrophic_mutants: "[PD Exotics] Radiothrophic World"
- origin_pd_radiotrophic_mutants_desc: ""
+ # Origins Extended
+ originsextended_psi: "[OEXT] Shroud Touched"
+ originsextended_cyb: "[OEXT] Cybernetic Manipulation"
+ originsextended_core: "[OEXT] Dormant Core"
+ originsextended_infest: "[OEXT] Planetary Infestation"
+ originsextended_gaia: "[OEXT] Gaia"
+ originsextended_graveyard: "[OEXT] The Graveyard"
+ originsextended_starless: "[OEXT] Starless"
+ originsextended_magnetica: "[OEXT] Magnetica"
 
- origin_pd_scrapyard_world: "[PD Uniques] Scrapyard World"
- origin_pd_scrapyard_world_desc: ""
+ # Even More Origins
+ origin_reliquary: "[EMO] Back to the Future"
+ origin_hive: "[EMO] Ecosystem Integration"
 
- origin_pd_hycean_aquatic: "[PD Exotics] Hycean World"
- origin_pd_hycean_aquatic_desc: ""
-
- 
+ # MEM
+ origin_mem_from_the_ashes: "[MEM] From the Ashes"
+ origin_mem_ceaseless_gaze: "[MEM] Ceaseless Gaze"
 # /
 
 # Jobs
