several trait and pop category changes

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -771,40 +771,40 @@
  tec_trait_tec_biological_mutagenic_evolution:0 "Forced Evolution:\n"
 
  trait_tec_biological_exoskeleton:0 "Xenoskeleton"
- trait_tec_biological_exoskeleton_desc:0 ""
+ trait_tec_biological_exoskeleton_desc:0 "§LTo do§!"
 
  trait_tec_biological_intellect:0 "Mutative Intellect"
  trait_tec_biological_intellect_desc:0 "§LTo do§!"
 
  trait_tec_biological_brain:0 "Cortex Germinations"
- trait_tec_biological_brain_desc:0 ""
+ trait_tec_biological_brain_desc:0 "§LTo do§!"
 
  trait_tec_biological_symbiotes:0 "Polyorganic Symbiotes"
- trait_tec_biological_symbiotes_desc:0 ""
+ trait_tec_biological_symbiotes_desc:0 "§LTo do§!"
  
  trait_tec_biological_overdrive:0 "Endocrinal Overdrive"
- trait_tec_biological_overdrive_desc:0 ""
+ trait_tec_biological_overdrive_desc:0 "§LTo do§!"
 
  trait_tec_biological_reproduction:0 "Accelerated Mitosis"
- trait_tec_biological_reproduction_desc:0 ""
+ trait_tec_biological_reproduction_desc:0 "§LTo do§!"
 
  trait_tec_biological_appendages:0 "Bio-Appendages"
- trait_tec_biological_appendages_desc:0 ""
+ trait_tec_biological_appendages_desc:0 "§LTo do§!"
 
  trait_tec_biological_unity:0 "Cellular Memory"
- trait_tec_biological_unity_desc:0 ""
+ trait_tec_biological_unity_desc:0 "§LTo do§!"
 
  trait_tec_biological_unimind:0 "Geno-Unimind"
- trait_tec_biological_unimind_desc:0 ""
+ trait_tec_biological_unimind_desc:0 "§LTo do§!"
 
  trait_tec_biological_energy:0 "Bioelectric Synchrony"
- trait_tec_biological_energy_desc:0 ""
+ trait_tec_biological_energy_desc:0 "§LTo do§!"
 
  trait_tec_biological_mining:0 "Litochemical Biology"
- trait_tec_biological_mining_desc:0 ""
+ trait_tec_biological_mining_desc:0 "§LTo do§!"
 
  trait_tec_biological_farming:0 "Biomatter Affinity"
- trait_tec_biological_farming_desc:0 ""
+ trait_tec_biological_farming_desc:0 "§LTo do§!"
 
  # Building
  building_tec_biological_extractor:0 "Xenocyte Extractor"
