--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -181,9 +181,9 @@ empire_not_elitist_or_materialist:0 "$TRIGGER_FAIL$Our empire does not embrace e
  planet_tec_batteries: "Organic Batteries"
 
  # Trait specific
- planet_jobs_tec_biopsionic_embroided:0 "Embroided Pops"
- mod_planet_jobs_tec_biopsionic_embroided_produces_mult:0 "§YEmbroided§! Pop Output"
- mod_planet_jobs_tec_biopsionic_embroided_upkeep_mult:0 "§YEmbroided§! Pop Upkeep"
+ planet_jobs_tec_biopsionic_embroidered:0 "Embroidered Pops"
+ mod_planet_jobs_tec_biopsionic_embroidered_produces_mult:0 "§YEmbroidered§! Pop Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_upkeep_mult:0 "§YEmbroidered§! Pop Upkeep"
 
  planet_jobs_tec_cyberlinked:0 "Cyberconnected Pops"
  mod_planet_jobs_tec_cyberlinked_produces_mult:0 "§BCyberentangled§! Pop Output"
@@ -848,14 +848,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
  trait_tec_replicant_habitability:0 "Adaptable Nanocells"
  trait_tec_replicant_habitability_desc:0 "§LIntelligent biosynthetic measures allow a high degree of adaptation for this replicant species, modifying physionomy, capacities and the whole organism for with the environment.§!"
- trait_tec_replicant_habitability_effect_standard:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_CEIL$§!: §G+25%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
- trait_tec_replicant_habitability_effect_advanced:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_CEIL$§!: §G+50%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
-
-	# +10% basic and industrial resources
- trait_tec_replicant_capacitor:0 "Nano-Capacitors"
- trait_tec_replicant_capacitor_desc:0 "§LAdapted inside normally hollow micro cavities of the body, this species has a myriad of specifically designed nanites integrated with computing, work and development spaces.§!"
- trait_tec_replicant_capacitor_effect_standard:0 "Resources from Jobs: §G+10%§!"
- trait_tec_replicant_capacitor_effect_advanced:0 "Each Replicant pop provides §G+0.33%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
+ trait_tec_replicant_habitability_effect_standard:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_FLOOR$§!: §G+25%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
+ trait_tec_replicant_habitability_effect_advanced:0 "£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_FLOOR$§!: §G+50%§!\nReplicant pops gain a production effect based on the planet §HClimate§! or §HType§!"
 
 	# growth speed and assembly speed
  trait_tec_replicant_universal:0 "Universal Template"
@@ -869,11 +863,17 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.025§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
  trait_tec_replicantbudding_effect_advanced:0 "Each replicant pop working as a slave or better produces §G0.05§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
+	# +10% basic and industrial resources
+ trait_tec_replicant_capacitor:0 "Nano-Capacitors"
+ trait_tec_replicant_capacitor_desc:0 "§LAdapted inside normally hollow micro cavities of the body, this species has a myriad of specifically designed nanites integrated with computing, work and development spaces.§!"
+ trait_tec_replicant_capacitor_effect_standard:0 "Resources from Jobs: §G+10%§!\nUpkeep from Jobs: §G-10%§!"
+ trait_tec_replicant_capacitor_effect_advanced:0 "Each Replicant pop provides §G+0.25%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
+
 	# army damage army health allows replicant armies
  trait_tec_replicant_warfare:0 "Bio-Warform"
  trait_tec_replicant_warfare_desc:0 "§LImprinted combat capacities, external layers of nano-dermis and a overclocked cyber-biological organs, with also integrated weapons and modular capacities make this species a deadly powerhouse, able to overcome any regular opponent.§!"
  trait_tec_replicant_warfare_effect_standard:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
- trait_tec_replicant_warfare_effect_advanced:0 "Army Damage: §G+40%§!\nArmy Health: §G+40%§!\nArmy Morale Damage: §G+25%§!"
+ trait_tec_replicant_warfare_effect_advanced:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
 
 # --------------- MACHINE ASCENSION TRAITS ----------------------
 # Advanced robot traits
@@ -1052,9 +1052,9 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  #trait_tec_biopsionic_hive:0 "Psionic Purity"
  #trait_tec_biopsionic_hive_desc:0 "§LHarmony of body, mind and will, reached in the purest of forms.§!"
 
- trait_tec_biopsionic_embroided:0 "Embroided Minds"
- trait_tec_biopsionic_embroided_desc:0 "§LA kind of strong biopsionic link unites all the members of this species, far beyond what any kind of naturally biological, psionically gifted or artificially engineered creates, sharing knowledge, experiences and feelings.§!"
- trait_tec_biopsionic_EMBROIDED_EFFECT:0 "£unity£ Unity from jobs: §G+10%§!\nEach pop will increase the output of any other pop with this trait present in the planet by §G+0.15%§!.§!"
+ trait_tec_biopsionic_embroidered:0 "Embroidered Minds"
+ trait_tec_biopsionic_embroidered_desc:0 "§LA kind of strong biopsionic link unites all the members of this species, far beyond what any kind of naturally biological, psionically gifted or artificially engineered creates, sharing knowledge, experiences and feelings.§!"
+ trait_tec_biopsionic_embroidered_EFFECT:0 "£unity£ Unity from jobs: §G+10%§!\nEach pop will increase the output of any other pop with this trait present in the planet by §G+0.25%§!.§!"
 
  trait_tec_biopsionic_brain:0 "Knowledge Transference"
  trait_tec_biopsionic_brain_desc:0 "§LUsing potent neurotransmissors paired with the increased psionic activity on this species members, they can transfer unfathomable amounts of thoughts in a moment, specially when both parts are in highly enriching environments.§!"
@@ -1081,7 +1081,7 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
  trait_tec_biopsionic_seed:0 "Biopsionic Seed"
  trait_tec_biopsionic_seed_desc:0 ""
- trait_tec_biopsionic_seed_effect:0 "This organic species is considered §MPsionic§! and benefits from §HPsionic bonuses§! and modifiers, but has no psionic capacities. Also counts as §HEmbroided Minded§! pops."
+ trait_tec_biopsionic_seed_effect:0 "This organic species is considered §MPsionic§! and benefits from §HPsionic bonuses§! and modifiers, but has no psionic capacities. Also counts as §HEmbroidered Minded§! pops."
 
  trait_tec_biopsionic_germination:0 "Essence Germination"
  trait_tec_biopsionic_germination_desc:0 ""
