--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -6552,62 +6552,62 @@
  mod_planet_jobs_tec_cybernetics_all_industrial_produces_add: "$mod_planet_jobs_tec_cybernetics_all_industrial_produces_mult$"
  mod_planet_jobs_tec_cybernetics_all_basic_produces_add: "$mod_planet_jobs_tec_cybernetics_all_basic_produces_mult$"
 
- # planet_jobs_tec_biopsionic_embroided - §YEmbroided§! Pop £job£ Jobs
- mod_base_planet_jobs_tec_biopsionic_embroided: "§YEmbroided§! Pop £job£ Jobs"
+ # planet_jobs_tec_biopsionic_embroidered - §Yembroidered§! Pop £job£ Jobs
+ mod_base_planet_jobs_tec_biopsionic_embroidered: "§YEmbroidered§! Pop £job£ Jobs"
 
- mod_planet_jobs_tec_biopsionic_embroided_produces_mult: "§YEmbroided§! Pop £job£ Jobs Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_produces_mult: "§YEmbroidered§! Pop £job£ Jobs Output"
 
- mod_planet_jobs_tec_biopsionic_embroided_minerals_produces_mult: "§YEmbroided§! Pop £job£ Jobs £minerals£ $minerals$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_food_produces_mult: "§YEmbroided§! Pop £job£ Jobs £food£ $food$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_energy_produces_mult: "§YEmbroided§! Pop £job£ Jobs £energy£ $energy$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_consumer_goods_produces_mult: "§YEmbroided§! Pop £job£ Jobs £consumer_goods£ $consumer_goods$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_alloys_produces_mult: "§YEmbroided§! Pop £job£ Jobs £alloys£ $alloys$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_physics_research_produces_mult: "§YEmbroided§! Pop £job£ Jobs £physics_research£ $physics_research$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_society_research_produces_mult: "§YEmbroided§! Pop £job£ Jobs £society_research£ $society_research$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_engineering_research_produces_mult: "§YEmbroided§! Pop £job£ Jobs £engineering_research£ $engineering_research$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_rare_crystals_produces_mult: "§YEmbroided§! Pop £job£ Jobs £rare_crystals£ $rare_crystals$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_volatile_motes_produces_mult: "§YEmbroided§! Pop £job£ Jobs £volatile_motes£ $volatile_motes$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_exotic_gases_produces_mult: "§YEmbroided§! Pop £job£ Jobs £exotic_gases£ $exotic_gases$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_unity_produces_mult: "§YEmbroided§! Pop £job£ Jobs £unity£ $unity$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_influence_produces_mult: "§YEmbroided§! Pop £job£ Jobs £influence£ $influence$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_sr_living_metal_produces_mult: "§YEmbroided§! Pop £job£ Jobs £sr_living_metal£ $sr_living_metal$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_sr_zro_produces_mult: "§YEmbroided§! Pop £job£ Jobs £sr_zro£ $sr_zro$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_sr_dark_matter_produces_mult: "§YEmbroided§! Pop £job£ Jobs £sr_dark_matter£ $sr_dark_matter$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_nanites_produces_mult: "§YEmbroided§! Pop £job£ Jobs £nanites£ $nanites$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_minor_artifacts_produces_mult: "§YEmbroided§! Pop £job£ Jobs £minor_artifacts£ $minor_artifacts$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_pop_growth_produces_mult: "§YEmbroided§! Pop £job£ Jobs $tec_loc_pop_grwoth$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_biological_assembly_produces_mult: "§YEmbroided§! Pop £job£ Jobs $tec_loc_biological_assembly$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_assembly_produces_mult: "§YEmbroided§! Pop £job£ Jobs $tec_loc_assembly$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_all_research_produces_mult: "§YEmbroided§! Pop £job£ Jobs $tec_loc_research_resources$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_all_industrial_produces_mult: "§YEmbroided§! Pop £job£ Jobs $tec_loc_industrial_resources$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_all_basic_produces_mult: "§YEmbroided§! Pop £job£ Jobs $tec_loc_basic_resources$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_minerals_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £minerals£ $minerals$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_food_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £food£ $food$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_energy_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £energy£ $energy$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_consumer_goods_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £consumer_goods£ $consumer_goods$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_alloys_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £alloys£ $alloys$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_physics_research_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £physics_research£ $physics_research$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_society_research_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £society_research£ $society_research$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_engineering_research_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £engineering_research£ $engineering_research$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_rare_crystals_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £rare_crystals£ $rare_crystals$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_volatile_motes_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £volatile_motes£ $volatile_motes$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_exotic_gases_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £exotic_gases£ $exotic_gases$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_unity_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £unity£ $unity$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_influence_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £influence£ $influence$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_sr_living_metal_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £sr_living_metal£ $sr_living_metal$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_sr_zro_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £sr_zro£ $sr_zro$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_sr_dark_matter_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £sr_dark_matter£ $sr_dark_matter$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_nanites_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £nanites£ $nanites$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_minor_artifacts_produces_mult: "§YEmbroidered§! Pop £job£ Jobs £minor_artifacts£ $minor_artifacts$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_pop_growth_produces_mult: "§YEmbroidered§! Pop £job£ Jobs $tec_loc_pop_grwoth$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_biological_assembly_produces_mult: "§YEmbroidered§! Pop £job£ Jobs $tec_loc_biological_assembly$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_assembly_produces_mult: "§YEmbroidered§! Pop £job£ Jobs $tec_loc_assembly$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_all_research_produces_mult: "§YEmbroidered§! Pop £job£ Jobs $tec_loc_research_resources$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_all_industrial_produces_mult: "§YEmbroidered§! Pop £job£ Jobs $tec_loc_industrial_resources$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_all_basic_produces_mult: "§YEmbroidered§! Pop £job£ Jobs $tec_loc_basic_resources$ Output"
 
- mod_planet_jobs_tec_biopsionic_embroided_minerals_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_minerals_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_food_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_food_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_energy_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_energy_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_consumer_goods_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_consumer_goods_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_alloys_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_alloys_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_physics_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_physics_research_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_society_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_society_research_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_engineering_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_engineering_research_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_rare_crystals_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_rare_crystals_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_volatile_motes_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_volatile_motes_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_exotic_gases_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_exotic_gases_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_unity_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_unity_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_influence_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_influence_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_sr_living_metal_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_sr_living_metal_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_sr_zro_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_sr_zro_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_sr_dark_matter_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_sr_dark_matter_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_nanites_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_nanites_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_minor_artifacts_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_minor_artifacts_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_amenities_produces_add: "§YEmbroided§! Pop £job£ Jobs $tec_loc_amenities$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_stability_produces_add: "§YEmbroided§! Pop £job£ Jobs $tec_loc_stability$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_trade_value_produces_add: "§YEmbroided§! Pop £job£ Jobs $tec_loc_trade_value$ Output"
- mod_planet_jobs_tec_biopsionic_embroided_biological_assembly_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_biological_assembly_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_assembly_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_assembly_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_all_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_all_research_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_all_industrial_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_all_industrial_produces_mult$"
- mod_planet_jobs_tec_biopsionic_embroided_all_basic_produces_add: "$mod_planet_jobs_tec_biopsionic_embroided_all_basic_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_minerals_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_minerals_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_food_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_food_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_energy_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_energy_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_consumer_goods_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_consumer_goods_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_alloys_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_alloys_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_physics_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_physics_research_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_society_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_society_research_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_engineering_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_engineering_research_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_rare_crystals_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_rare_crystals_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_volatile_motes_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_volatile_motes_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_exotic_gases_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_exotic_gases_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_unity_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_unity_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_influence_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_influence_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_sr_living_metal_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_sr_living_metal_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_sr_zro_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_sr_zro_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_sr_dark_matter_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_sr_dark_matter_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_nanites_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_nanites_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_minor_artifacts_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_minor_artifacts_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_amenities_produces_add: "§Yembroidered§! Pop £job£ Jobs $tec_loc_amenities$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_stability_produces_add: "§Yembroidered§! Pop £job£ Jobs $tec_loc_stability$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_trade_value_produces_add: "§Yembroidered§! Pop £job£ Jobs $tec_loc_trade_value$ Output"
+ mod_planet_jobs_tec_biopsionic_embroidered_biological_assembly_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_biological_assembly_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_assembly_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_assembly_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_all_research_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_all_research_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_all_industrial_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_all_industrial_produces_mult$"
+ mod_planet_jobs_tec_biopsionic_embroidered_all_basic_produces_add: "$mod_planet_jobs_tec_biopsionic_embroidered_all_basic_produces_mult$"
 
  # planet_jobs_tec_converged - §YConverged§! Pop £job£ Jobs
  mod_base_planet_jobs_tec_converged: "§YConverged§! Pop £job£ Jobs"
