Aquatic district cost standardization, placeholder colony types to reduce errors, land of plenty inlines for districts, land of opportunity trade scales with asscensions, fixed aquatic district conditions for infinite menial planets

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -374,7 +374,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 # ------------------------------------------------------------
  civic_tec_capitalized_innovation:0 "Capitalized Innovation"
  civic_tec_capitalized_innovation_desc:0 "The constant competition between laboratories and private research industries is a process that has greatly benefited this empire, as it converted into acquisition of better and most affordable research associates."
- civic_tooltip_capitalized_innovation_effects:0 "$tec_loc_trade_value$ from £job_researcher£ $£job_researcher_plural$: §G+3§!"
+ civic_tooltip_capitalized_innovation_effects:0 "$mod_planet_researchers_trade_value_produces_add$: §G+3§!"
 
 
  # former civic_ultimate_collective
