Extracted more district effects to inlines, refactored swaps and arcologies, added maintenance districts for gestalts instead of leisure, made trade districts not be habitation districts, buffed spare part drone.

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2521,7 +2521,7 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  tec_planet_spec_change_jobs_district:0 "The §YPlanet Designation§! alters the jobs provided by this £district£ District.\n\n"
  tec_planet_designation_change_jobs_and_upkeep_district:0 "The §YPlanet Designation§! alters the jobs provided and £strategic£ Upkeep of this £district£ District.\n\n"
 
- tec_useless_without_upgrading_planet_jobs:0 "This district is less effective than §YPlanet Specialization§! focused versions; buildings or designations won't make any effect. You can upgrade your planet with §YPlanetary Decisions§!.\n\n"
+ tec_useless_without_upgrading_planet_jobs:0 "This district is less effective than §YPlanet Specialization§! focused versions. You can upgrade your planet with §YPlanetary Decisions§!.\n\n"
 
  tec_upgradeable_district_jobs_energy:0 "This district can get increased production with a £building£ §YEnergy Grid§! building.\n\n"
  tec_upgradeable_district_jobs_minerals:0 "This district can get increased production with a £building£ §YMineral Processing§! building.\n\n"
@@ -2611,9 +2611,9 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  district_tec_arcology_faith_plural:0 "Faith Arcologies"
  district_tec_arcology_faith_desc:0 "Tall and magnificent ornamented arcologies where devotes manifest their faith; cathedral-like buildings are erected and reflect the brightness of their meticulous and passionate decorations as manifestations of the pure, deep faith of the inhabitants."
 
- district_tec_arcology_unity_gestalt:0 "Relay Arcology"
- district_tec_arcology_unity_gestalt_plural:0 "Relay Arcologies"
- district_tec_arcology_unity_gestalt_desc:0 "These specialized arcologies host a myriad of drone agents which greatly boost the control of the gestalt consciousness."
+ district_tec_arcology_maintenance:0 "Maintenance Arcology"
+ district_tec_arcology_maintenance_plural:0 "Maintenance Arcologies"
+ district_tec_arcology_maintenance_desc:0 "These specialized arcologies host a myriad of drone agents which help in day to day tasks and improve the efficiency of supply lines."
 
  district_tec_arcology_housing_precursor:0 "Precursor Arcology"
  district_tec_arcology_housing_precursor_plural:0 "Precursor Arcologies"
@@ -2818,9 +2818,9 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  district_tec_rw_leisure_plural:0 "Utopian Segment"
  district_tec_rw_leisure_desc:0 "No matter how or who or what you are, these arcologies are filled with extremely advanced transportation, entertainment and nurturing systems, making any resident enjoy the goods of a pleasant existence."
 
- district_tec_rw_unity_gestalt:0 "Relay Segment"
- district_tec_rw_unity_gestalt_plural:0 "Relay Segment"
- district_tec_rw_unity_gestalt_desc:0 "This ringworld segment serves as a giant relay for the collective will and thought, channeling the gestalt consciousness to all the empire width with the help of useful designed drones."
+ district_tec_rw_maintenance:0 "Maintenance Segment"
+ district_tec_rw_maintenance_plural:0 "Maintenance Segments"
+ district_tec_rw_maintenance_desc:0 "This ringworld segment serves as a giant hub for logisticts and auxiliary power generation, providing maintenance and support to the ring."
 
 
  # Future
@@ -3673,6 +3673,13 @@ job_angler_effect_desc: "$job_aqu_angler_effect_desc$"
 
 building_tec_factory_gestalt: "\n§HThis building will swap half of the £job_foundry£ $job_alloy_drone_plural$/$job_fabricator_plural$ jobs on the Industrial district to £job_artisan£ $job_artisan_drone_plural$ Jobs.§!"
 
+# hab
+
+tec_mercantile_commercial_enterprise_needs_t2_hab:
+"§HDue to unsuficient infrastructure, $job_merchant_plural$ are not available until we upgrade the habitat.§!"
+
+tec_mercantile_commercial_enterprise_gestalt_needs_t2_hab:
+"§HDue to unsuficient infrastructure, $job_tec_trade_drone_plural$ are not available until we upgrade the habitat.§!"
 
 # Assembly Localization
 
