More text changes pre mixed implementation

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2065,22 +2065,20 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  BUILDING_TEC_BIOPSIO_ALLOW_CONVERGENCE:0 "This building allows the §YRitual of Convergence§! effect on this colony, and will produce extra £sr_zro£ §Yresources§! with each successful ritual."
 
 # ------------------------------------------------- Cyberpsio
+# Misc
+ mod_tec_entropy:0 "£sr_dark_matter£ Entropy"
+ mod_tec_entropy_desc:0 "Entropy is a relative measure of anomalous matter relocated from other dimensions to our own, unstabilizing the local flow of time and space due to the exotic chaotic physics involved"
 
-
+# Extractor
  building_tec_cyberpsionic_extractor_1:0 "Dimensional Extractor"
  building_tec_cyberpsionic_extractor_1_plural:0 "Dimensional Extractors"
- building_tec_cyberpsionic_extractor_1_desc:0 "This structure, made of exotic and powerful materials, harness residual psionic energy into refined dust that can be used for state of the art cybernetic and psionic creations."
+ building_tec_cyberpsionic_extractor_1_desc:0 "This structure, made of exotic and powerful materials, harness residual anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
 
  building_tec_cyberpsionic_extractor_2:0 "Dimensional Extractor"
- building_tec_cyberpsionic_extractor_2_desc:0 "This advanced structure, made of exotic and powerful materials, harness extreme amounts of psionic energy into refined dust that can be used for state of the art cybernetic and psionic creations."
+ building_tec_cyberpsionic_extractor_2_desc:0 "This advanced structure, made of exotic and powerful materials, harness extreme amounts of anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
 
  building_tec_cyberpsionic_extractor_3:0 "Dimensional Extractor"
- building_tec_cyberpsionic_extractor_3_desc:0 "This advanced structure, made of exotic and powerful materials, drains unfathomable amounts of psionic energy from the shroud into refined dust that can be used for state of the art cybernetic and psionic creations."
-
- #"Shroud Conduit"
- #"Shroud Pylon"
- #"Shroud Harvester"
-
+ building_tec_cyberpsionic_extractor_3_desc:0 "This advanced structure, made of exotic and powerful materials, drains unfathomable amounts of anomalous energy from other dimensions into refined dust that can be used for state of the art cybernetic and psionic creations."
 
  BUILDING_TEC_CYBERPSIONIC_DANGER_1:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ynominal§! and there is no risk involved."
  BUILDING_TEC_CYBERPSIONIC_DANGER_2:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Gincreased§! and there is no risk involved."
@@ -2088,6 +2086,15 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  BUILDING_TEC_CYBERPSIONIC_DANGER_4:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, but the §Rrisk§! of dimensional incursions is §Renormous§!."
  BUILDING_TEC_CYBERPSIONIC_DANGER_5:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, and so the §Rrisk of attack§! of psionic entities against our empire."
 
+# Transmutter
+ building_tec_cyberpsionic_transmutter:0 "Phase Transmutter"
+ building_tec_cyberpsionic_transmutter_plural:0 "Phase Transmutters"
+ building_tec_cyberpsionic_transmutter_desc:0 "Advanced installations that refine Zro particles into energy by applying physic principles to anomalous crossdimensional matter"
+
+# Webway
+ building_tec_cyberpsionic_gate:0 "Phase-Gate"
+ building_tec_cyberpsionic_gate_plural:0 "Phase-Gates"
+ building_tec_cyberpsionic_gate_desc:0 "TO DO"
 
 # ---------------------------------------------------------------
 # BRANCH OFFICES
