Fixed growth loc typo

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -50,7 +50,7 @@
  tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
  tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
  tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
- tec_loc_pop_grwoth: "£mod_pop_growth_speed£ Pop Growth Speed"
+ tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
 
  tec_loc_biological_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$"
  tec_loc_assembly: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
