--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -286,7 +286,7 @@ policy_healthcare:0 "Healthcare"
 
  private_healthcare_name:0 "Private Healthcare"
  private_healthcare:0 "Private Healthcare"
- private_healthcare_desc:0 "All medical services are relegated to private companies that ensure the best for the better payers, with state of the art medical treatments that greatly enhance the life those who can afford the cost.\n\n$tec_loc_trade_value$ from £job_healthcare£ $job_healthcare_plural$: §G+5§!\n$tec_loc_pop_grwoth$ from £job_healthcare£ $job_healthcare_plural$: §R-2.5%§!"
+ private_healthcare_desc:0 "All medical services are relegated to private companies that ensure the best for the better payers, with state of the art medical treatments that greatly enhance the life those who can afford the cost.\n\n$tec_loc_trade_value$ from £job_healthcare£ $job_healthcare_plural$: §G+5§!\n$tec_loc_pop_growth$ from £job_healthcare£ $job_healthcare_plural$: §R-2.5%§!"
 
  public_healthcare_name:0 "Public Healthcare"
  public_healthcare:0 "Public Healthcare"
