--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1923,4 +1923,4 @@ tec_unworthy_biopop_citizenship:0 "$TRIGGER_FAIL$These dirty xeno bioforms are n
  BIOSERVANT_remnant_plural:0 "Biocreation remnants"
 
 # Trait tooltips
-trait_tec_natural_sync_tooltip: "$tec_loc_pop_grwoth$ on Perfect Planets: §G+10%§!"
+trait_tec_natural_sync_tooltip: "$tec_loc_pop_growth$ on Perfect Planets: §G+10%§!"
